Sutter Health/src/objects/Guarantor__c.object
<CustomObject>
    <description>The Guarantor object is used to store all guarantor contact information.</description>
    <fields>
        <fullName>Guarantor_First_Name__c</fullName>
        <label>Guarantor First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_ID__c</fullName>
        <description>External ID used to match a guarantor&apos;s record to the original record in the Initiate MDM repository when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Guarantor ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Last_Name__c</fullName>
        <label>Guarantor Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Middle_Name__c</fullName>
        <label>Guarantor Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Phone_Home__c</fullName>
        <label>Guarantor Home Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Phone_Work__c</fullName>
        <label>Guarantor Work Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Guarantor</label>
    <nameField>
        <label>Guarantor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guarantors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>